# copperspice-gettingstarted

./: .gitignore  README.md  azure-pipelines.yml  configure-x64-v140-runtime.bat  configure-x64-v141-runtime.bat  configure-x64-v142-runtime.bat  copperspice.md  make-nuget-release-readme.txt
.github/ISSUE_TEMPLATE/: issue-report.md
analyse/: CMakeLists.warnings.cmake  CMakeLists.warnings.suppressed.cmake  configure.bat  copperspice_report.sh
analyse/show_rsp/: main.cpp
customized/: CopperSpiceBinaryTargets.cmake  CopperSpiceLibraryTargets.cmake
documenation/: migration.md
example_project_2022/CopperExample/: CopperExample.sln  CopperExample.vcxproj  CopperExample.vcxproj.filters  main.cpp  packages.config
example_project_cmake/: CMakeLists.txt  CMakeLists.warnings.cmake  build.bat  build.sh  configure-x64-msbuild-v141-runtime.bat  configure-x64-ninja-v142-runtime.bat  configure-x64-ninja-vs2022-runtime.bat  cs.natvis
example_project_cmake/cmake/: CMakeLists.msvc.zero.config.cmake  CMakeLists.warnings.cmake
example_project_cmake/src/: CMakeLists.txt  extra.cpp  extra.h  main.cpp
example_project_vs2017/CompiledUIControl/: CompiledUIControl.vcxproj  cs_assert.h
example_project_vs2017/HelloHerbs/: HelloHerbs.vcxproj  main.cpp
example_project_vs2019/CompiledUIControl/: CompiledUIControl.vcxproj  CompiledUIControl.vcxproj.filters  main.cpp  mainwindow.ui  packages.config
example_project_vs2019/HelloHerbs/: HelloHerbs.vcxproj  HelloHerbs.vcxproj.filters  main.cpp
nuget/: Copperspice.1.5.0.nuspec  Copperspice.1.5.2.1.nuspec  Copperspice.1.5.2.2.nuspec  Copperspice.1.5.2.nuspec  Copperspice.1.5.3.1064.nuspec  Copperspice.1.5.3.nuspec  Copperspice.1.6.1.nuspec  Copperspice.1.6.2.nuspec  Copperspice.1.6.nuspec  Copperspice.nuspec  pack.bat
nuget/copperspice/: Copperspice.nuspec  create_nuget_package.bat  readme.txt
nuget/copperspice.1.6.2/licenses/: LICENSE.txt
package/: CMakeLists.txt  build_nuget_package.bat  post_cpack.py
package/nuget/: CMakeLists.txt  DESCRIPTION.md  build_nuget_package.bat  compile_copperspice.bat  post_cpack.cmake
package/package_template/: README.md
scripts/: bash-2019.bat  bash-2022.bat  bash.bat
test/: CMakeLists.txt  CMakeSettings.json  configure-x64-msbuild-v141-runtime.bat  configure-x64-ninja-v142-runtime.bat
test/strings/: CMakeLists.txt  stopwatch.h  test_fonts.cpp  test_qwebpage.cpp  test_strings.cpp
visual studio 2017/CompiledUIControl/: CompiledUIControl.cpp  CompiledUIControl.sln  CompiledUIControl.vcxproj  packages.config
visual studio 2017/HelloHerbs/: HelloHerbs.cpp  HelloHerbs.sln  HelloHerbs.vcxproj  HelloHerbs.vcxproj.filters  main.cpp  packages.config
visual studio 2019/CompiledUIControl/: CompiledUIControl.sln  CompiledUIControl.vcxproj  CompiledUIControl.vcxproj.filters  main.cpp  mainwindow.ui  packages.config
visual studio 2019/HelloHerbs/: HelloHerbs.sln  HelloHerbs.vcxproj  HelloHerbs.vcxproj.filters  main.cpp  packages.config
